# Simulacrum

./: .gitignore  CMakeLists.txt  README.md  git_operations.md
assets/: config.json
cmake/: BuildHelpers.cmake  CompilerSettings.cmake  Dependencies.cmake  ProjectInfo.cmake  RuntimePath.cmake
cmake/scripts/: CopyAssets.cmake  CopyDLLs.cmake
frontend/: package-lock.json
src/: main.cpp
src/engine/core/: config.cpp  config.hpp  context.cpp  context.hpp  game_app.cpp  game_app.hpp  game_state.cpp  game_state.hpp  time.cpp  time.hpp
src/engine/input/: input_manager.cpp  input_manager.hpp
src/engine/object/: component.hpp  game_object.cpp  game_object.hpp
src/engine/object/components/: transform_component.cpp  transform_component.hpp
src/engine/render/: camera.cpp  camera.hpp  gpu_renderer.cpp  gpu_renderer.hpp  renderer.cpp  renderer.hpp  sprite.hpp  text_renderer.cpp  text_renderer.hpp
src/engine/resource/: audio_manager.cpp  audio_manager.hpp  font_manager.cpp  font_manager.hpp  resource_manager.cpp  resource_manager.hpp  shader_manager.hpp  texture_manager.cpp  texture_manager.hpp
src/engine/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/engine/ui/: ui_button.cpp  ui_button.hpp  ui_element.cpp  ui_element.hpp  ui_interactive.cpp  ui_interactive.hpp  ui_label.cpp  ui_label.hpp  ui_manager.cpp  ui_manager.hpp  ui_panel.cpp  ui_panel.hpp
src/engine/ui/layout/: ui_layout_manager.hpp  ui_layoutable.hpp
src/engine/ui/state/: ui_hover_state.cpp  ui_hover_state.hpp  ui_normal_state.cpp  ui_normal_state.hpp  ui_pressed_state.cpp  ui_pressed_state.hpp  ui_state.hpp
src/engine/utils/: math.hpp
src/game/scene/: title_scene.cpp  title_scene.hpp
